# TP-UTN-Campus

./: .gitignore  Alumno.cpp  Alumno.h  AlumnoAdmin.cpp  AlumnoAdmin.h  AlumnoManager.cpp  AlumnoManager.h  Alumno_menu.cpp  Alumno_menu.h  ArchivoAlumno.cpp  ArchivoAlumno.h  ArchivoCarrera.cpp  ArchivoCarrera.h  ArchivoComision.cpp  ArchivoComision.h  ArchivoCorrelativa.cpp  ArchivoCorrelativa.h  ArchivoDocente.cpp  ArchivoDocente.h  ArchivoExamen.cpp  ArchivoExamen.h  ArchivoInscripcion.cpp  ArchivoInscripcion.h  ArchivoInscripcionComision.cpp  ArchivoInscripcionComision.h  ArchivoMateria.cpp  ArchivoMateria.h  ArchivoPersona.cpp  ArchivoPersona.h  CMakeLists.txt  Calificacion.cpp  Calificacion.h  Carrera.cpp  Carrera.h  CarreraAdmin.cpp  CarreraAdmin.h  CarreraManager.cpp  CarreraManager.h  Comision.cpp  Comision.h  (+136 more)
.github/workflows/: build.yml
test_data/: README.md
tests/: test_alumno.cpp
